background image size fix

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .card {
-  background-size: auto;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   height: 100%;
